2.1020: Wed Nov 19 2014
   - need more of this easy::st logic to recover from these stupid connection crashes

2.1019: Sun Nov 16 2014
   - try to repair connections on dhb methods like selectall_arrayref

2.1017: Sat Feb 08 2014
   - make the autoloads actually autoload

2.1015: Thu Jan 30 2014
   - improved autoloader for dbh

2.1014: Fri Oct 04 2013
   - firstrow()

2.1012: Sun Nov 25 2012
   - allow for DBIx::ContextualFetch, etc

2.1011: Tue Oct 04 2011
   - disable spurious warning

2.1010: Thu Jun 30 2011
   - more fixes on error checking

2.1009: Wed Jun 29 2011
   - slightly better error handling

2.1008: Tue May 18 2010
   - alternate locations for username and password info
   - documented the new locations

2.1007: Tue May 11 2010
   - more introduced bugs

2.1006: Mon May 10 2010
   - I made various improvements to the API, nothing worth
     mentioning.  Just little things to the new() call -- see the
     POD.  Hrm, $dbo->firstval() is worth noting -- see the POD.

2.1003: Fri Mar 26 2010
   - got utf8 working

2.1002: Tue Aug 04 2009
   - make sure autoraise is explicit
   - remove or die $dbo->errstr from docs

2.1001: Wed May  6 07:22:23 EDT 2009
   - the only place the tests actually run (my house)
     ... they weren't being run.

2.1000: Wed May  6 07:22:23 EDT 2009
   - I cleaned up the pod a lot
   - modernized the makefile
   - fixed various mundane things
   - got rid of version.pm (cursed object)

2.0.4: Mon Jun  9 20:55:50 EDT 2008
   - added a smarter last_insert_id

2.0.3: Tue May 27 12:04:27 EDT 2008
   - (wow, use version has to be on the same line as our $VERSION
      for older EUMM)

2.0.2: Mon May 26 15:56:50 EDT 2008
   - I might as well do a new version of everything using
     version.pm while I wait for all my CPAN deletes to go
     through.  I just discovered that version.pm doesn't/didn't
     go core until perl 5.9...  I really wish I'd have prereqed
     it everywhere I used it, but I didn't.  *sigh*
