@@ -1,5 +1,7 @@
 2.1020: Wed Nov 19 2014
    - need more of this easy::st logic to recover from these stupid connection crashes
+   - I'm still having all sorts of connection problems on that one host, and I found
+     several places where connections drop inexplicably.  building tests.
 
 2.1019: Sun Nov 16 2014
    - try to repair connections on dhb methods like selectall_arrayref
